--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "vue-router": "^3.0.1",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
-    "better-scroll": "^1.9.1"
+    "better-scroll": "^1.9.1",
+    "axios": "^0.18.0",
+    "vue-lazyload": "^1.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
