--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "vue": "^2.5.2",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
     "better-scroll": "^1.9.1",
     "axios": "^0.18.0",
-    "vue-lazyload": "^1.2.2"
+    "vue-lazyload": "^1.2.2",
+    "create-keyframe-animation": "^0.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
